samples/_failures_safe/1761391535_dcda37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fbae25d.c: In function ‘main’:
./samples/SAFE/__tmp_8fbae25d.c:148:24: error: expected ‘)’ at end of input
  148 |     if (word_count <= 0
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_8fbae25d.c:148:5: error: expected declaration or statement at end of input
  148 |     if (word_count <= 0
      |     ^~
